# vn-nlp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
crates/vn-nlp/: Cargo.toml
crates/vn-nlp-core/: Cargo.toml
crates/vn-nlp-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/vn-nlp-normalize/: Cargo.toml
crates/vn-nlp-normalize/src/: diacritics.rs  lib.rs  number.rs  unicode_norm.rs
crates/vn-nlp-python/: Cargo.toml  pyproject.toml
crates/vn-nlp-python/src/: lib.rs
crates/vn-nlp-segment/: Cargo.toml
crates/vn-nlp-segment/src/: lib.rs  rules.rs
crates/vn-nlp-tokenize/: Cargo.toml
crates/vn-nlp-tokenize/benches/: tokenize_bench.rs
crates/vn-nlp-tokenize/src/: dictionary.rs  lib.rs  stream.rs  syllable.rs  unicode.rs
crates/vn-nlp-wasm/: Cargo.toml
crates/vn-nlp-wasm/src/: lib.rs
crates/vn-nlp/examples/: basic_tokenize.rs  full_pipeline.rs  normalize_text.rs  sentence_split.rs  stream_tokenize.rs
crates/vn-nlp/src/: lib.rs
crates/vn-nlp/tests/: integration_normalize.rs  integration_segment.rs  integration_tokenize.rs
crates/vn-nlp/tests/corpus/: sample_texts.txt
data/dictionaries/: vn-words.txt
data/stopwords/: vn-stopwords.txt
demo/: index.html
docs/: 01-introduction.md  02-architecture.md  03-usage-tokenization.md  04-usage-normalization.md  05-usage-segmentation.md  README.md
