[package]
name = "vn-nlp-segment"
description = "Vietnamese sentence segmentation for vn-nlp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vn-nlp-core = { path = "../vn-nlp-core" }
